--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
 </head>
 <body>
   <h1>Hama's Calculator</h1>
+  <div id="display">
+    <div id="display-text">0</div>
+    <div id="buttons">
+      <button class="button" id="clear">C</button>
+      <button class="button" id="divide">/</button>
+      <button class="button" id="multiply">x</button>
+      <button class="button" id="seven">7</button>
+      <button class="button" id="eight">8</button>
+      <button class="button" id="nine">9</button>
+      <button class="button" id="subtract">-</button>
+      <button class="button" id="four">4</button>
+      <button class="button" id="five">5</button>
+      <button class="button" id="six">6</button>
+      <button class="button" id="add">+</button>
+      <button class="button" id="one">1</button>
+      <button class="button" id="two">2</button>
+      <button class="button" id="three">3</button>
+      <button class="button" id="equals">=</button>
+      <button class="button" id="zero">0</button>
+      <button class="button" id="decimal">.</button>
+    </div>
+  </div>
 </body>
   <script src="script.js"></script>
 </html>
