--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Hama's Calculator</h1>
-  <div id="display">
+  <div id="calculator">
     <div id="display-text">0</div>
     <div id="buttons">
       <button class="button" id="clear">C</button>
