--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Hama's Calculator</h1>
   <div id="calculator">
-    <div id="display-text">0</div>
+    <div id="display">0</div>
     <div id="buttons">
       <button class="button" id="clear">C</button>
       <button class="button" id="divide">/</button>
