--- a/index.html
+++ b/index.html
@@ -8,26 +8,42 @@
 </head>
 <body>
   <h1>Hama's Calculator</h1>
-  <div id="calculator">
-    <div id="display">0</div>
-    <div id="buttons">
-      <button class="button" id="clear">C</button>
-      <button class="button" id="divide">/</button>
-      <button class="button" id="multiply">x</button>
-      <button class="button" id="seven">7</button>
-      <button class="button" id="eight">8</button>
-      <button class="button" id="nine">9</button>
-      <button class="button" id="subtract">-</button>
-      <button class="button" id="four">4</button>
-      <button class="button" id="five">5</button>
-      <button class="button" id="six">6</button>
-      <button class="button" id="add">+</button>
-      <button class="button" id="one">1</button>
-      <button class="button" id="two">2</button>
-      <button class="button" id="three">3</button>
-      <button class="button" id="equals">=</button>
-      <button class="button" id="zero">0</button>
-      <button class="button" id="decimal">.</button>
+  <div class="container">
+    <div class="calculator">
+      <form>
+        <div>
+          <input type="text" name="display">
+        </div>
+        <div>
+          <input type="button" value="AC">
+          <input type="button" value="DE">
+          <input type="button" value=".">
+          <input type="button" value="/">
+        </div>
+        <div>
+          <input type="button" value="7">
+          <input type="button" value="8">
+          <input type="button" value="9">
+          <input type="button" value="*">
+        </div>
+        <div>
+          <input type="button" value="4">
+          <input type="button" value="5">
+          <input type="button" value="6">
+          <input type="button" value="-">
+        </div>
+        <div>
+          <input type="button" value="1">
+          <input type="button" value="2">
+          <input type="button" value="3">
+          <input type="button" value="+">
+        </div>
+        <div>
+          <input type="button" value="00">
+          <input type="button" value="0">
+          <input type="button" value="=">
+        </div>
+      </form>
     </div>
   </div>
 </body>
