--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Calculator</title>
 </head>
 <body>
-  <h1>Hama's Calculator</h1>
+  <h1>Hama's Super Awesome Calculator</h1>
   <div class="container">
     <div class="calculator">
       <form>
